--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiamo/phpas2",
+  "name": "weslinkde/phpas2",
   "description": "PHPAS2 is a php-based implementation of the EDIINT AS2 standard",
   "version": "1.3.4",
   "authors": [
